src/main/java/com/interceptor/example/user/domain/errors/UserException.java
package com.interceptor.example.user.domain.errors;

public class UserException extends Exception{

  public UserException(String message){
    super(message);
  }
}
